--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -19,15 +19,10 @@
 </table>
 
 <div class='row'>
-  <% if current_user != user %>
-    <% if current_user.following?(user) %>
-      <%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete, class: "btn btn-info" %>
-    <% else %>
-      <%= link_to "フォローする", user_relationships_path(user.id), method: :post, class: "btn btn-success" %>
-    <% end %>
-  <% else %>
-    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-      <i class="fas fa-user-cog"></i>
-    <% end %>
-  <% end %>
+  <div class="col">
+    <%= render 'users/follow-btn', user: user %>
+  </div>
+  <div class="col">
+    <%= render 'users/dm-btn', user: user, isRoom: isRoom, roomId: roomId, room: room, entry: entry %>
+  </div>
 </div>
