--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -22,6 +22,7 @@
         <td>
           <%= "#{book.book_comments.count}件のコメント" %>
         </td>
+        <td>閲覧数 <%= book.view_counts.count %></td>
       </tr>
     <% end %>
   </tbody>
